[package]
name = "nit-stream"
version = "0.1.0"
authors = ["Cesbo Developers Team"]
build = "src/build.rs"
edition = "2018"

[dependencies]
config = { git = "ssh://git@github.com/cesbo/libconfig.git", branch = "master" }
udp = { git = "ssh://git@github.com/cesbo/libudp.git", branch = "master" }
mpegts = { git = "ssh://git@github.com/cesbo/libmpegts.git", branch = "master" }

[profile.release]
panic = "abort"
opt-level = 3
lto = true
